# challenge

./: README.md
aux/: install_drawer_app.sh  package.json
drawerapp/: drawerapp.css  drawerapp.html  drawerapp.js
drawerapp/.meteor/: .id  packages  versions
drawerapp/client/: pix.js
drawernode/src/turtle_star/: CMakeLists.txt  package.xml
drawernode/src/turtle_star/src/: star_client.cpp  star_drawer.cpp  star_server.cpp
